Improve examples to make them more easily hostable

--- a/examples/Imphenzia-PixPal/index.html
+++ b/examples/Imphenzia-PixPal/index.html
@@ -7,7 +7,7 @@
       name="viewport"
       content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0"
     />
-    <link rel="icon" type="image/png" href="/textures/ImphenziaPixPal_BaseColor.png">
+    <link rel="icon" type="image/png" href="../node_modules/three-pixpal-material/textures/ImphenziaPixPal_BaseColor.png">
     <style>
       canvas {
         position: absolute;
@@ -35,11 +35,12 @@
     <script type="importmap">
       {
         "imports": {
-          "three": "../../node_modules/three/build/three.core.min.js",
-          "three/webgpu": "../../node_modules/three/build/three.webgpu.min.js",
-          "three/tsl": "../../node_modules/three/build/three.tsl.min.js",
-          "three/addons/": "../../node_modules/three/examples/jsm/",
-          "three-pixpal-material": "../../dist/pixpal-material.js"
+          "three": "../node_modules/three/build/three.core.min.js",
+          "three/webgpu": "../node_modules/three/build/three.webgpu.min.js",
+          "three/tsl": "../node_modules/three/build/three.tsl.min.js",
+          "three/addons/": "../node_modules/three/examples/jsm/",
+          "three-pixpal-material": "../node_modules/three-pixpal-material/dist/pixpal-material.js",
+          "three-pixpal-material/": "../node_modules/three-pixpal-material/"
         }
       }
     </script>
